# set-library-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Set.h
src/: Set.cpp  main.cpp
tests/: test_set.cpp
